3.3.4/_sources/gallery/pyplots/whats_new_99_mplot3d.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/pyplots/whats_new_99_mplot3d.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_pyplots_whats_new_99_mplot3d.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_whats_new_99_mplot3d.py:


=======================
What's New 0.99 Mplot3d
=======================

Create a 3D surface plot.

.. GENERATED FROM PYTHON SOURCE LINES 8-25

.. code-block:: default

    import numpy as np
    import matplotlib.pyplot as plt
    from matplotlib import cm
    from mpl_toolkits.mplot3d import Axes3D

    X = np.arange(-5, 5, 0.25)
    Y = np.arange(-5, 5, 0.25)
    X, Y = np.meshgrid(X, Y)
    R = np.sqrt(X**2 + Y**2)
    Z = np.sin(R)

    fig = plt.figure()
    ax = Axes3D(fig)
    ax.plot_surface(X, Y, Z, rstride=1, cstride=1, cmap=cm.viridis)

    plt.show()




.. image:: /gallery/pyplots/images/sphx_glr_whats_new_99_mplot3d_001.png
    :alt: whats new 99 mplot3d
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 26-33

------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:

.. GENERATED FROM PYTHON SOURCE LINES 34-38

.. code-block:: default


    import mpl_toolkits
    mpl_toolkits.mplot3d.Axes3D
    mpl_toolkits.mplot3d.Axes3D.plot_surface




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function Axes3D.plot_surface at 0x7fcc163465e0>




.. _sphx_glr_download_gallery_pyplots_whats_new_99_mplot3d.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: whats_new_99_mplot3d.py <whats_new_99_mplot3d.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: whats_new_99_mplot3d.ipynb <whats_new_99_mplot3d.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
